--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
         # If you have a protected branch, you need to use a personal access token
         # with the 'repo' permission.
         # See https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # github_token: ${{ secrets.GH_TOKEN }}
         # (Optional) The files to publish. Default is "posts/**/*.md"
         files: 'posts/**/*.md'
         # (Optional) The git branch to use. Default is 'main'.
@@ -43,7 +43,8 @@ jobs:
         # See https://www.conventionalcommits.org. 
         conventional_commits: true
         # (Optional) Do not make actual changes on dev.to if it's a pull request.
-        dry_run: ${{ github.event_name == 'pull_request' }}
+        # dry_run: ${{ github.event_name == 'pull_request' }}
+        dry_run: false
 
     # (Optional) Add comment with dev.to changes if it's a pull request.
     - uses: actions-ecosystem/action-create-comment@v1
