--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
     rev: v0.12.0
     hooks:
       - id: markdownlint
+        files: \.(md|mdown|markdown)$
         args: ["-r", "~MD007,~MD013"]
 
 ...
